Change 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </svg>
     <div class="text">
       <h1>happy birthday!</h1>
-      <h1>Hlalumi</h1>
+      <h1>Phemelo</h1>
         <div class="button1" id="flowers">
             Click For Flowers
         </div>
@@ -172,3 +172,4 @@
     <script src="i am nobody/open_me❤.js"></script>
       </body>
       </html>
+
