--- a/i am nobody/Birthday_Letter/Letter.html
+++ b/i am nobody/Birthday_Letter/Letter.html
@@ -15,7 +15,7 @@
         <div class="cover-page" id="coverPage">
             <div class="heading"><p><u>Happy Birthday My love</u></p></div>
             
-            <div class="message">On this day of the 20th of December, i would love to wish you the happiest birthday my love &#x1F60A;<span style="color:red;">&#10084;</span>. Even though we are miles apart from each other, i hope you have the best birthday ever&#x1F60A;. Missing you is part of my daily routine and the distance between has taught me patience and perseverance&#x1F60A;<span style="color:red;">&#10084;</span>. With every passing day<span style="color:red;">&#10084;</span>, my love for you grows and i become more and more fond of you. No amount of words can i explain how much i'm in love with you<span style="color:red;">&#10084;</span> but even though you mentioned that your birthday is not a big deal, i still wish i could've been able to spend this day with you<span style="color:red;">&#10084;</span>. I Love You<span style="color:red;">&#10084;</span>.</div>
+            <div class="message">On this day of the 16th of February, i would love to wish you the happiest birthday my love &#x1F60A;<span style="color:red;">&#10084;</span>. Even though we are mostly apart from each other, i hope you had the best birthday ever&#x1F60A;. Missing you is part of my daily routine and the distance between has taught me patience and perseverance&#x1F60A;<span style="color:red;">&#10084;</span>. With every passing day<span style="color:red;">&#10084;</span>, my love for you grows and i become more and more fond of you. No amount of words can i explain how much i'm in love with you<span style="color:red;">&#10084;</span> but even though our situation didn't allow us to be together, i still wish i could've been able to spend this day with you<span style="color:red;">&#10084;</span>. I Love You<span style="color:red;">&#10084;</span>.</div>
             <div></div>
             <div class="by">Made with <span style="color:red;">&#10084;</span></div>
             <div></div>
@@ -25,9 +25,9 @@
         </div>
         <div class="content" id="content">
             <iframe src="https://giphy.com/embed/oASrbQiuoZs9mZt590" width="250" height="250" frameBorder="0" class="gif" allowFullScreen></iframe>
-            <img src="birthday picture.jpg" class="pic" id="pic">
+            <img src="birthday picture.jpeg" class="pic" id="pic">
             <div class="to" id="to">
-                To: My darling Hlalumi<span style="color:red;">&#10084;</span>
+                To: My darling Phemelo<span style="color:red;">&#10084;</span>
             </div>
         </div>
         <button class="open" id="openButton">Open</button>
